# advent-of-code-haskell

./: .gitignore  LICENSE  README.md  advent-of-code-haskell.cabal  cabal.project
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: ci.yml
app/: Day.hs  Download.hs  Main.hs  Main01.hs  Main02.hs  Scaffold.hs  Submit.hs  TestDay.hs
scripts/: scaffold.sh
src/: Day01.hs  Day02.hs
src/AoC/: Template.hs
test/: Day01Spec.hs  Spec.hs
