cabal-version: 3.0
name: advent-of-code-haskell
version: 0.1.0.0
synopsis: Advent of Code solutions in Haskell
description: Solutions for Advent of Code puzzles implemented in Haskell
license: MIT
author: Yoshihiro Kumazawa
maintainer: kum4th3w0rld@gmail.com
category: Game
build-type: Simple

common shared-properties
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import: shared-properties
  exposed-modules: AoC.Template
  hs-source-dirs: src
  build-depends: base >=4.17 && <5
               , text
               , containers
               , vector
               , bytestring
               , time
               , process
               , hspec

executable advent-of-code
  import: shared-properties
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: base >=4.17 && <5
               , advent-of-code-haskell
               , text
               , time

test-suite advent-of-code-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends: base >=4.17 && <5
               , advent-of-code-haskell
               , hspec
               , text

executable download
  import: shared-properties
  main-is: Download.hs
  hs-source-dirs: app
  build-depends: base >=4.17 && <5
               , bytestring
               , http-conduit
               , case-insensitive

executable scaffold
  import: shared-properties
  main-is: Scaffold.hs
  hs-source-dirs: app
  build-depends: base >=4.17 && <5
               , text
               , directory
               , process

executable submit
  import: shared-properties
  main-is: Submit.hs
  hs-source-dirs: app
  build-depends: base >=4.17 && <5
               , advent-of-code-haskell
               , bytestring
               , http-conduit
               , case-insensitive
               , text

executable day
  import: shared-properties
  main-is: Day.hs
  hs-source-dirs: app
  build-depends: base >=4.17 && <5
               , advent-of-code-haskell
               , text

executable test
  import: shared-properties
  main-is: TestDay.hs
  hs-source-dirs: app
  build-depends: base >=4.17 && <5
               , process
